--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -7,27 +7,40 @@ on:
     branches: [main, master]
 
 jobs:
+  # 🔧 DEVELOPMENT BUILD - All branches except main/master
   build-development:
     name: Development Build
     runs-on: macos-latest
-    if: github.event_name == 'push' && !contains(fromJson('["main", "master"]'), github.ref_name)
+    if: github.ref_name != 'main' && github.ref_name != 'master'
     
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
       
-    - name: Setup Flutter
+    - name: Setup Flutter with Cache
       uses: subosito/flutter-action@v2
       with:
         channel: 'stable'
         cache: true
+        cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:'
+        cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:'
         
-    - name: Clean Everything
+    - name: Cache Dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.pub-cache
+          ios/Pods
+          ios/.symlinks
+        key: ${{ runner.os }}-deps-${{ hashFiles('pubspec.lock', 'ios/Podfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-deps-
+        
+    - name: Clean Build Artifacts
       run: |
         flutter clean
         cd ios
-        rm -rf Pods/ .symlinks/ build/
-        rm -f Podfile.lock
+        rm -rf build/
         
     - name: Get Dependencies
       run: flutter pub get
@@ -98,7 +111,11 @@ jobs:
     - name: Install CocoaPods
       run: |
         cd ios
-        pod install --repo-update
+        if [ ! -f Podfile.lock ] || [ pubspec.lock -nt Podfile.lock ]; then
+          pod install --repo-update
+        else
+          echo "Using cached pods"
+        fi
         
     - name: Import Development Certificates
       uses: Apple-Actions/import-codesign-certs@v2
@@ -115,6 +132,12 @@ jobs:
         api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
         api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
         
+    - name: Get Provisioning Profile UUID
+      run: |
+        DEV_PROFILE_UUID=$(ls ~/Library/MobileDevice/Provisioning\ Profiles/ | grep ".mobileprovision" | head -1 | sed 's/.mobileprovision//')
+        echo "DEV_PROFILE_UUID=$DEV_PROFILE_UUID" >> $GITHUB_ENV
+        echo "Development Profile UUID: $DEV_PROFILE_UUID"
+        
     - name: Flutter Build
       run: flutter build ios --release --no-codesign
       
@@ -130,6 +153,7 @@ jobs:
           archive \
           CODE_SIGN_STYLE=Manual \
           CODE_SIGN_IDENTITY="iPhone Developer" \
+          PROVISIONING_PROFILE_SPECIFIER="$DEV_PROFILE_UUID" \
           DEVELOPMENT_TEAM="JPXGBUG6ZW" \
           -allowProvisioningUpdates
           
@@ -148,27 +172,40 @@ jobs:
         path: ${{ runner.temp }}/Development/*.ipa
         retention-days: 30
 
+  # 🚀 APP STORE BUILD - Main/master branches only
   build-appstore:
     name: App Store Build
     runs-on: macos-latest
-    if: github.event_name == 'pull_request' && contains(fromJson('["main", "master"]'), github.base_ref)
+    if: github.ref_name == 'main' || github.ref_name == 'master'
     
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
       
-    - name: Setup Flutter
+    - name: Setup Flutter with Cache
       uses: subosito/flutter-action@v2
       with:
         channel: 'stable'
         cache: true
+        cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:'
+        cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:'
         
-    - name: Clean Everything
+    - name: Cache Dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.pub-cache
+          ios/Pods
+          ios/.symlinks
+        key: ${{ runner.os }}-deps-${{ hashFiles('pubspec.lock', 'ios/Podfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-deps-
+        
+    - name: Clean Build Artifacts
       run: |
         flutter clean
         cd ios
-        rm -rf Pods/ .symlinks/ build/
-        rm -f Podfile.lock
+        rm -rf build/
         
     - name: Get Dependencies
       run: flutter pub get
@@ -242,7 +279,11 @@ jobs:
     - name: Install CocoaPods
       run: |
         cd ios
-        pod install --repo-update
+        if [ ! -f Podfile.lock ] || [ pubspec.lock -nt Podfile.lock ]; then
+          pod install --repo-update
+        else
+          echo "Using cached pods"
+        fi
         
     - name: Import Distribution Certificates
       uses: Apple-Actions/import-codesign-certs@v2
@@ -259,6 +300,12 @@ jobs:
         api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
         api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
         
+    - name: Get Provisioning Profile UUID
+      run: |
+        APPSTORE_PROFILE_UUID=$(ls ~/Library/MobileDevice/Provisioning\ Profiles/ | grep ".mobileprovision" | head -1 | sed 's/.mobileprovision//')
+        echo "APPSTORE_PROFILE_UUID=$APPSTORE_PROFILE_UUID" >> $GITHUB_ENV
+        echo "App Store Profile UUID: $APPSTORE_PROFILE_UUID"
+        
     - name: Flutter Build
       run: flutter build ios --release --no-codesign
       
@@ -274,6 +321,7 @@ jobs:
           archive \
           CODE_SIGN_STYLE=Manual \
           CODE_SIGN_IDENTITY="iPhone Distribution" \
+          PROVISIONING_PROFILE_SPECIFIER="$APPSTORE_PROFILE_UUID" \
           DEVELOPMENT_TEAM="JPXGBUG6ZW" \
           -allowProvisioningUpdates
           
@@ -301,157 +349,3 @@ jobs:
         name: ios-appstore-${{ github.sha }}
         path: ${{ runner.temp }}/AppStore/*.ipa
         retention-days: 90
-
-  build-distribution:
-    name: Distribution Build
-    runs-on: macos-latest
-    if: github.event_name == 'push' && contains(fromJson('["main", "master"]'), github.ref_name)
-    
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
-      
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        channel: 'stable'
-        cache: true
-        
-    - name: Clean Everything
-      run: |
-        flutter clean
-        cd ios
-        rm -rf Pods/ .symlinks/ build/
-        rm -f Podfile.lock
-        
-    - name: Get Dependencies
-      run: flutter pub get
-      
-    - name: Run Tests
-      run: flutter test
-      
-    - name: Prepare iOS Build
-      run: |
-        flutter precache --ios
-        flutter build ios --config-only
-        
-    - name: Create Fixed Podfile
-      run: |
-        cd ios
-        cat > Podfile << 'EOF'
-        platform :ios, '14.0'
-
-        ENV['COCOAPODS_DISABLE_STATS'] = 'true'
-
-        project 'Runner', {
-          'Debug' => :debug,
-          'Profile' => :release,
-          'Release' => :release,
-        }
-
-        def flutter_root
-          generated_xcode_build_settings_path = File.expand_path(File.join('..', 'Flutter', 'Generated.xcconfig'), __FILE__)
-          unless File.exist?(generated_xcode_build_settings_path)
-            raise "#{generated_xcode_build_settings_path} must exist. If you're running pod install manually, make sure flutter pub get is executed first"
-          end
-
-          File.foreach(generated_xcode_build_settings_path) do |line|
-            matches = line.match(/FLUTTER_ROOT\=(.*)/)
-            return matches[1].strip if matches
-          end
-          raise "FLUTTER_ROOT not found in #{generated_xcode_build_settings_path}. Try deleting Generated.xcconfig, then run flutter pub get"
-        end
-
-        require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
-
-        flutter_ios_podfile_setup
-
-        target 'Runner' do
-          use_frameworks!
-          use_modular_headers!
-          flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-        end
-
-        post_install do |installer|
-          installer.pods_project.targets.each do |target|
-            if target.name == 'FMDB-SQLCipher'
-              target.build_configurations.each do |config|
-                config.build_settings['PRODUCT_NAME'] = 'FMDBSQLCipher'
-              end
-            end
-            
-            target.build_configurations.each do |config|
-              config.build_settings['CODE_SIGN_STYLE'] = 'Automatic'
-              config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
-              config.build_settings.delete('PROVISIONING_PROFILE_SPECIFIER')
-              config.build_settings.delete('PROVISIONING_PROFILE')
-              config.build_settings.delete('CODE_SIGN_IDENTITY')
-            end
-            
-            flutter_additional_ios_build_settings(target)
-          end
-        end
-        EOF
-        
-    - name: Install CocoaPods
-      run: |
-        cd ios
-        pod install --repo-update
-        
-    - name: Import Distribution Certificates
-      uses: Apple-Actions/import-codesign-certs@v2
-      with:
-        p12-file-base64: ${{ secrets.DIST_CERTIFICATES_P12 }}
-        p12-password: ${{ secrets.DIST_CERTIFICATES_P12_PASSWORD }}
-        
-    - name: Download App Store Provisioning Profile
-      uses: Apple-Actions/download-provisioning-profiles@v3
-      with:
-        bundle-id: com.youllgetit.app
-        profile-type: IOS_APP_STORE
-        issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
-        api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
-        api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
-        
-    - name: Flutter Build
-      run: flutter build ios --release --no-codesign
-      
-    - name: Archive Distribution Build
-      run: |
-        cd ios
-        rm -rf ~/Library/Developer/Xcode/DerivedData/Runner-*
-        xcodebuild -workspace Runner.xcworkspace \
-          -scheme Runner \
-          -configuration Release \
-          -destination generic/platform=iOS \
-          -archivePath $RUNNER_TEMP/Runner-Distribution.xcarchive \
-          archive \
-          CODE_SIGN_STYLE=Manual \
-          CODE_SIGN_IDENTITY="iPhone Distribution" \
-          DEVELOPMENT_TEAM="JPXGBUG6ZW" \
-          -allowProvisioningUpdates
-          
-    - name: Export Distribution IPA
-      run: |
-        cd ios
-        xcodebuild -exportArchive \
-          -archivePath $RUNNER_TEMP/Runner-Distribution.xcarchive \
-          -exportPath $RUNNER_TEMP/Distribution \
-          -exportOptionsPlist ExportOptions-AppStore.plist
-          
-    - name: Auto-Upload to App Store Connect
-      run: |
-        IPA_FILE=$(find "$RUNNER_TEMP/Distribution" -name "*.ipa" | head -1)
-        xcrun altool --upload-app \
-          --type ios \
-          --file "$IPA_FILE" \
-          --username "${{ secrets.APPLE_ID }}" \
-          --password "${{ secrets.APPLE_APP_PASSWORD }}" \
-          --verbose
-          
-    - name: Upload Distribution Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: ios-distribution-${{ github.sha }}
-        path: ${{ runner.temp }}/Distribution/*.ipa
-        retention-days: 365
