--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -117,99 +117,56 @@ jobs:
           echo "Using cached pods"
         fi
 
-    - name: Setup Isolated Keychain
-      run: |
-        KEYCHAIN=$HOME/Library/Keychains/build.keychain
-        KEYCHAIN_PASSWORD=github-actions
-
-        # Delete any existing build keychains
-        security delete-keychain $KEYCHAIN 2>/dev/null || true
-        
-        # Create fresh keychain
-        security create-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN
-        security unlock-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN
-        security set-keychain-settings -t 3600 -u $KEYCHAIN
-        
-        # IMPORTANT: Set ONLY our keychain in search path
-        security list-keychains -d user -s $KEYCHAIN
-        security default-keychain -d user -s $KEYCHAIN
-        
-        echo "=== Keychain search path (should only show build.keychain) ==="
-        security list-keychains
-        
-    - name: Import Development Certificates
+    - name: Setup Keychain and Import Certificates
       env:
+        BUILD_CERTIFICATE_BASE64: ${{ secrets.DEV_CERTIFICATES_P12 }}
         P12_PASSWORD: ${{ secrets.DEV_CERTIFICATES_P12_PASSWORD }}
-        DEV_CERT_BASE64: ${{ secrets.DEV_CERTIFICATES_P12 }}
+        KEYCHAIN_PASSWORD: github-actions
       run: |
-        KEYCHAIN_PATH="$HOME/Library/Keychains/build.keychain"
-        
-        # Delete any existing certificates from the keychain (should be none, but just in case)
-        security find-identity -v -p codesigning "$KEYCHAIN_PATH" | grep ") " | while read line; do
-          cert_hash=$(echo "$line" | awk '{print $2}')
-          echo "Deleting existing certificate: $cert_hash"
-          security delete-identity -Z "$cert_hash" "$KEYCHAIN_PATH" 2>/dev/null || true
-        done
-        
-        # Import fresh certificate
-        echo "=== Importing certificate ==="
-        echo "$DEV_CERT_BASE64" | base64 --decode > cert.p12
-        security import cert.p12 -k "$KEYCHAIN_PATH" -P "$P12_PASSWORD" -T /usr/bin/codesign
-        
-        echo "=== After import: Certificate count ==="
-        CERT_COUNT=$(security find-identity -v -p codesigning "$KEYCHAIN_PATH" | grep -c ") " || echo "0")
-        echo "Number of certificates: $CERT_COUNT"
-        
-        echo "=== All certificates in keychain ==="
-        security find-identity -v -p codesigning "$KEYCHAIN_PATH"
-        
-        # Clean up the P12 file
-        rm cert.p12
-      
-        echo "=== Final verification: What xcodebuild sees ==="
-        security find-identity -v -p codesigning "$KEYCHAIN_PATH" && echo "✅ xcodebuild sees certificates" || echo "❌ xcodebuild does not see certificates"
+        # Create variables
+        CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+        KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
 
-    - name: Install Development Provisioning Profile
+        # Import certificate from secrets
+        echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+
+        # Create temporary keychain
+        security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+        security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+        security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+        # Import certificate to keychain (with proper flags)
+        security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+        
+        # KEY FIX: Allow codesign access without password prompt
+        security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+        
+        # Set keychain search path
+        security list-keychain -d user -s $KEYCHAIN_PATH
+
+        # Store keychain path for later steps
+        echo "KEYCHAIN_PATH=$KEYCHAIN_PATH" >> $GITHUB_ENV
+        
+        # Verify certificate imported
+        echo "=== Imported certificates ==="
+        security find-identity -v -p codesigning $KEYCHAIN_PATH
+
+    - name: Install Provisioning Profile
       env:
-       DEV_PROVISIONING_PROFILE_BASE64: ${{ secrets.DEV_PROVISIONING_PROFILE_BASE64 }}
+        BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.DEV_PROVISIONING_PROFILE_BASE64 }}
       run: |
-        mkdir -p "$HOME/Library/Developer/Xcode/UserData/Provisioning Profiles"
-        mkdir -p "$HOME/Library/MobileDevice/Provisioning Profiles"
+        # Create variables
+        PP_PATH=$RUNNER_TEMP/02453868-11d4-4316-93ad-8d1e2ea59221.mobileprovision
 
-        echo "$DEV_PROVISIONING_PROFILE_BASE64" | base64 --decode > "$HOME/Library/MobileDevice/Provisioning Profiles/02453868-11d4-4316-93ad-8d1e2ea59221.mobileprovision"
-        cp "$HOME/Library/MobileDevice/Provisioning Profiles/02453868-11d4-4316-93ad-8d1e2ea59221.mobileprovision" "$HOME/Library/Developer/Xcode/UserData/Provisioning Profiles/02453868-11d4-4316-93ad-8d1e2ea59221.mobileprovision"
-        
-        ls -l ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles/  
+        # Import provisioning profile from secrets
+        echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PP_PATH
 
-    - name: Debug Signing Setup
-      run: |
-        echo "=== Available Certificates ==="
-        security find-identity -v -p codesigning
+        # Apply provisioning profile
+        mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+        cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
         
-        echo "=== Provisioning Profiles ==="
-        ls -la "$HOME/Library/MobileDevice/Provisioning Profiles/" 2>/dev/null || echo "No MobileDevice profiles"
-        ls -la "$HOME/Library/Developer/Xcode/UserData/Provisioning Profiles/" 2>/dev/null || echo "No Xcode profiles"
-        
-        echo "=== Keychain Status ==="
-        security list-keychains
-        security default-keychain
-
-    - name: Debug Bundle ID Configuration
-      run: |
-        cd ios
-        echo "=== Xcode Project Bundle ID ==="
-        xcodebuild -workspace Runner.xcworkspace -scheme Runner -showBuildSettings | grep PRODUCT_BUNDLE_IDENTIFIER
-        
-        echo "=== Provisioning Profile App ID ==="
-        security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/02453868-11d4-4316-93ad-8d1e2ea59221.mobileprovision | grep -A1 "application-identifier"
-        
-        echo "=== Certificate in Profile ==="
-        security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/02453868-11d4-4316-93ad-8d1e2ea59221.mobileprovision | grep -A5 "DeveloperCertificates"
-
-    - name: Verify Profile Matches Certificate
-      run: |
-        # Check if the certificate in the profile matches what we have
-        security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/02453868-11d4-4316-93ad-8d1e2ea59221.mobileprovision | grep -A20 "DeveloperCertificates"
+        echo "=== Installed provisioning profiles ==="
+        ls -la ~/Library/MobileDevice/Provisioning\ Profiles/
 
     - name: Flutter Build
       run: flutter build ios --release --no-codesign
@@ -219,11 +176,9 @@ jobs:
         cd ios
         rm -rf ~/Library/Developer/Xcode/DerivedData/Runner-*
 
-        KEYCHAIN_PATH="$HOME/Library/Keychains/build.keychain"
+        KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
 
-        # Set default keychain
-        security default-keychain -d user -s "$KEYCHAIN_PATH"
-        security unlock-keychain -p github-actions "$KEYCHAIN_PATH"
+        security unlock-keychain -p "github-actions" $KEYCHAIN_PATH
 
         xcodebuild -workspace Runner.xcworkspace \
           -scheme Runner \
