--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -117,79 +117,89 @@ jobs:
           echo "Using cached pods"
         fi
 
-    - name: Setup Keychain and Import Certificates
-      env:
-        BUILD_CERTIFICATE_BASE64: ${{ secrets.DEV_CERTIFICATES_P12 }}
-        P12_PASSWORD: ${{ secrets.DEV_CERTIFICATES_P12_PASSWORD }}
-        KEYCHAIN_PASSWORD: github-actions
-      run: |
-        # Create variables
-        CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-        KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+    # - name: Setup Keychain and Import Certificates
+    #   env:
+    #     BUILD_CERTIFICATE_BASE64: ${{ secrets.DEV_CERTIFICATES_P12 }}
+    #     P12_PASSWORD: ${{ secrets.DEV_CERTIFICATES_P12_PASSWORD }}
+    #     KEYCHAIN_PASSWORD: github-actions
+    #   run: |
+    #     # Create variables
+    #     CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+    #     KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
 
-        # Import certificate from secrets
-        echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+    #     # Import certificate from secrets
+    #     echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
 
-        # Create temporary keychain
-        security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-        security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-        security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+    #     # Create temporary keychain
+    #     security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+    #     security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+    #     security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
 
-        # Import certificate to keychain (with proper flags)
-        security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+    #     # Import certificate to keychain (with proper flags)
+    #     security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
         
-        # KEY FIX: Allow codesign access without password prompt
-        security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+    #     # KEY FIX: Allow codesign access without password prompt
+    #     security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
         
-        # Set keychain search path
-        security list-keychain -d user -s $KEYCHAIN_PATH
+    #     # Set keychain search path
+    #     security list-keychain -d user -s $KEYCHAIN_PATH
 
-        # Store keychain path for later steps
-        echo "KEYCHAIN_PATH=$KEYCHAIN_PATH" >> $GITHUB_ENV
+    #     # Store keychain path for later steps
+    #     echo "KEYCHAIN_PATH=$KEYCHAIN_PATH" >> $GITHUB_ENV
         
-        # Verify certificate imported
-        echo "=== Imported certificates ==="
-        security find-identity -v -p codesigning $KEYCHAIN_PATH
+    #     # Verify certificate imported
+    #     echo "=== Imported certificates ==="
+    #     security find-identity -v -p codesigning $KEYCHAIN_PATH
 
-    - name: Install Provisioning Profile
-      env:
-        BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.DEV_PROVISIONING_PROFILE_BASE64 }}
-      run: |
-        # Create variables
-        PP_PATH=$RUNNER_TEMP/02453868-11d4-4316-93ad-8d1e2ea59221.mobileprovision
+    # - name: Install Provisioning Profile
+    #   env:
+    #     BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.DEV_PROVISIONING_PROFILE_BASE64 }}
+    #   run: |
+    #     # Create variables
+    #     PP_PATH=$RUNNER_TEMP/02453868-11d4-4316-93ad-8d1e2ea59221.mobileprovision
 
-        # Import provisioning profile from secrets
-        echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PP_PATH
+    #     # Import provisioning profile from secrets
+    #     echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PP_PATH
 
-        # Apply provisioning profile
-        mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-        cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+    #     # Apply provisioning profile
+    #     mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+    #     cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
         
-        echo "=== Installed provisioning profiles ==="
-        ls -la ~/Library/MobileDevice/Provisioning\ Profiles/
+    #     echo "=== Installed provisioning profiles ==="
+    #     ls -la ~/Library/MobileDevice/Provisioning\ Profiles/
 
     # - name: Flutter Build
     #   run: flutter build ios --no-codesign --debug
+
+    - name: Setup App Store Connect API Key
+      env:
+        API_KEY: ${{ secrets.APPSTORE_PRIVATE_KEY }}
+        API_KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}
+        ISSUER_ID: ${{ secrets.APPSTORE_ISSUER_ID }}
+      run: |
+        mkdir -p ~/.appstoreconnect/private_keys
+        echo "$API_KEY" > ~/.appstoreconnect/private_keys/AuthKey_$API_KEY_ID.p8
       
     - name: Archive Development Build
+      env:
+        API_KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}
+        ISSUER_ID: ${{ secrets.APPSTORE_ISSUER_ID }}
       run: |
         cd ios
         rm -rf ~/Library/Developer/Xcode/DerivedData/Runner-*
-
-        KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-
-        security unlock-keychain -p "github-actions" $KEYCHAIN_PATH
 
         xcodebuild -workspace Runner.xcworkspace \
           -scheme Runner \
           -configuration Debug \
           -destination generic/platform=iOS \
           -archivePath "$RUNNER_TEMP/Runner-Dev.xcarchive" \
+          -allowProvisioningUpdates \
+          -authenticationKeyPath ~/.appstoreconnect/private_keys/AuthKey_$API_KEY_ID.p8 \
+          -authenticationKeyID $API_KEY_ID \
+          -authenticationKeyIssuerID $ISSUER_ID \
           archive \
-          "Runner:CODE_SIGN_STYLE=Manual" \
-          "Runner:DEVELOPMENT_TEAM=JPXGBUG6ZW" \
-          "Runner:PROVISIONING_PROFILE=02453868-11d4-4316-93ad-8d1e2ea59221" \
-          "Runner:CODE_SIGN_IDENTITY=iPhone Developer: ANDREI SEBASTIAN DUȚĂ (9QD83S28R6)"
+          CODE_SIGN_STYLE=Automatic \
+          Runner:DEVELOPMENT_TEAM=JPXGBUG6ZW
 
     - name: Export Development IPA
       run: |
