--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -190,7 +190,7 @@ jobs:
 
         xcodebuild -workspace Runner.xcworkspace \
           -scheme Runner \
-          -configuration Debug \
+          -configuration Release \
           -destination generic/platform=iOS \
           -archivePath "$RUNNER_TEMP/Runner-Dev.xcarchive" \
           -allowProvisioningUpdates \
