--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -122,34 +122,31 @@ jobs:
         mkdir -p ~/.appstoreconnect/private_keys
         echo "$API_KEY" > ~/.appstoreconnect/private_keys/AuthKey_$API_KEY_ID.p8
       
-    - name: Archive Development Build
-      env:
-        API_KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}
-        ISSUER_ID: ${{ secrets.APPSTORE_ISSUER_ID }}
+    - name: Archive Without Signing
       run: |
         cd ios
-        rm -rf ~/Library/Developer/Xcode/DerivedData/Runner-*
-
         xcodebuild -workspace Runner.xcworkspace \
           -scheme Runner \
           -configuration Release \
           -destination generic/platform=iOS \
           -archivePath "$RUNNER_TEMP/Runner-Dev.xcarchive" \
-          -allowProvisioningUpdates \
-          -authenticationKeyPath ~/.appstoreconnect/private_keys/AuthKey_$API_KEY_ID.p8 \
-          -authenticationKeyID $API_KEY_ID \
-          -authenticationKeyIssuerID $ISSUER_ID \
           archive \
-          CODE_SIGN_STYLE=Automatic \
-          DEVELOPMENT_TEAM=JPXGBUG6ZW
+          CODE_SIGNING_ALLOWED=NO
 
-    - name: Export Development IPA
+    - name: Export and Sign for App Store
+      env:
+        API_KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}
+        ISSUER_ID: ${{ secrets.APPSTORE_ISSUER_ID }}
       run: |
         cd ios
         xcodebuild -exportArchive \
           -archivePath $RUNNER_TEMP/Runner-Dev.xcarchive \
           -exportPath $RUNNER_TEMP/Development \
           -exportOptionsPlist ExportOptions-AppStore.plist \
+          -allowProvisioningUpdates \
+          -authenticationKeyPath ~/.appstoreconnect/private_keys/AuthKey_$API_KEY_ID.p8 \
+          -authenticationKeyID $API_KEY_ID \
+          -authenticationKeyIssuerID $ISSUER_ID
           
     - name: Upload Development Artifact
       uses: actions/upload-artifact@v4
